@@ -21,6 +21,8 @@ TODO: perl-shell-window? perl-unix-socket?
 TODO: command line editing when icanon?
 TODO: split ROW into a ROW_fast (0..total*2-1) and ROW macros?
 
+	- remove "using namespace std" because clang erroneously
+          thinks thats an error.
 	- finding a matching font (e.g. bold version of the base font)
 	  was broken (reported by Eamon Walker).
 	- fix parsing of bg image styles. They really work now.
